--- a/qualifications.html
+++ b/qualifications.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Your Name :: Qualifications</title>
+    <title>George Stead :: Qualifications</title>
+    <link rel="stylesheet" href="styles/main.css" type="text/css">
   </head>
   <body>
     <div class="container">
       <div class="header">
         <div class="logo">
-          <h1><a href="#">Your Name</a></h1>
+          <h1><a href="#">George Stead</a></h1>
         </div>
         <nav>
           <ul>
