--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="header">
         <div class="logo">
-          <h1><a href="#">George W Stead</a></h1>
+          <h1><a href="#">George Stead</a></h1>
         </div>
         <nav>
           <ul>
