--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <body>
     <div class="container">
-      <div class="header">
+      <header>
         <div class="logo">
           <h1><a href="#">George Stead</a></h1>
         </div>
@@ -20,7 +20,7 @@
             <li><a href="work-experience.html">Work Experience</a></li>
           </ul>
         </nav>
-      </div>
+      </header>
       <div class="content">
         <div class="section">
           <h2>Welcome</h2>
